Replaced Set.of() and Map.of with Collections.emptyXXX