@@ -18,10 +18,7 @@ package org.springframework.core.type.classreading;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Consumer;
 
 import org.springframework.asm.AnnotationVisitor;
@@ -93,7 +90,7 @@ class MergedAnnotationReadingVisitor<A extends Annotation> extends AnnotationVis
 	@Override
 	public void visitEnd() {
 		Map<String, Object> compactedAttributes
-				= this.attributes.size() == 0 ? Map.of() : this.attributes;
+				= this.attributes.size() == 0 ? Collections.emptyMap() : this.attributes;
 		MergedAnnotation<A> annotation = MergedAnnotation.of(
 				this.classLoader, this.source, this.annotationType, compactedAttributes);
 		this.consumer.accept(annotation);
